[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/ShyGraph/grab.png" type="Texture" id=1]
[ext_resource path="res://addons/ShyGraph/TypeControl.gd" type="Script" id=2]
[ext_resource path="res://addons/ShyGraph/BitMapButton.gd" type="Script" id=3]

[node name="TypeControl" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 218, 196 )
script = ExtResource( 2 )

[node name="Controls" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 74.0
margin_bottom = -80.0

[node name="Name" type="LineEdit" parent="Controls"]
margin_right = 950.0
margin_bottom = 24.0

[node name="Color" type="ColorPickerButton" parent="Controls"]
margin_top = 28.0
margin_right = 950.0
margin_bottom = 48.0

[node name="Size" type="Control" parent="Controls"]
margin_top = 52.0
margin_right = 950.0
margin_bottom = 100.0
rect_min_size = Vector2( 107, 48 )

[node name="X" type="SpinBox" parent="Controls/Size"]
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 34.0
min_value = 1.0
max_value = 64.0
value = 1.0
rounded = true
allow_greater = true
prefix = "X: "
suffix = "px"

[node name="Y" type="SpinBox" parent="Controls/Size"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 34.0
min_value = 1.0
max_value = 64.0
value = 1.0
rounded = true
allow_greater = true
prefix = "Y: "
suffix = "px"

[node name="Label" type="Label" parent="Controls/Size"]
anchor_bottom = 1.0
text = "Size: "
valign = 1

[node name="Multiple" type="CheckBox" parent="Controls"]
margin_top = 104.0
margin_right = 950.0
margin_bottom = 128.0
text = "Multiple"
align = 1

[node name="Sides" type="Control" parent="Controls"]
margin_top = 132.0
margin_right = 950.0
margin_bottom = 520.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
selected_color = Color( 0.25, 0.5, 0.283333, 1 )
unselected_color = Color( 0.5, 0.25, 0.25, 1 )

[node name="Grab1" type="Button" parent="."]
anchor_bottom = 0.5
margin_right = 74.0
margin_bottom = -12.0
icon = ExtResource( 1 )
flat = true
expand_icon = true

[node name="Grab2" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 1.0
margin_top = 12.0
margin_right = 74.0
icon = ExtResource( 1 )
flat = true
expand_icon = true

[node name="Index" type="SpinBox" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -12.0
margin_right = 74.0
margin_bottom = 12.0
rounded = true

[connection signal="text_changed" from="Controls/Name" to="." method="_on_Name_text_changed"]
[connection signal="color_changed" from="Controls/Color" to="." method="_on_Color_color_changed"]
[connection signal="value_changed" from="Controls/Size/X" to="." method="_on_X_value_changed"]
[connection signal="value_changed" from="Controls/Size/Y" to="." method="_on_Y_value_changed"]
[connection signal="toggled" from="Controls/Multiple" to="." method="_on_Multiple_toggled"]
[connection signal="value_changed" from="Index" to="." method="_on_Index_value_changed"]
